src/tests/fixtures/arguments/PositionalArgOptionalNotNullable.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlInput */
type Greeting = {
  name: string;
  salutation: string;
};

/** @gqlType */
export default class SomeType {
  /** @gqlField */
  hello(greeting?: string): string {
    return `${greeting ?? "Hello"} World`;
  }
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/arguments/PositionalArgOptionalNotNullable.invalid.ts:10:17 - error: Unexpected optional argument that does not also accept `null`. Optional arguments in GraphQL may get passed an explicit `null` value by the GraphQL executor. This means optional arguments must be typed to also accept `null`. Consider adding `| null` to the end of the argument type.

10   hello(greeting?: string): string {
                   ~
